@@ -650,11 +650,13 @@ public class XMLFilter implements
       ((TreeList) base).writeDocumentUri(uri);
   }
 
-  public void consume (SeqPosition position)
+  @Override
+  public void writePosition(SeqPosition position)
   {
     writePosition(position.sequence, position.ipos);
   }
 
+  @Override
   public void writePosition(AbstractSequence seq, int ipos)
   {
     if (ignoringLevel > 0)
