@@ -27,7 +27,8 @@ public class RelativeStepFilter extends FilterConsumer
   }
 
   // Not sure if this is ever called ...
-  public void consume(SeqPosition position)
+  @Override
+  public void writePosition(SeqPosition position)
   {
     writePosition(position.sequence, position.ipos);
   }
